<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg"
    android:layout_marginTop="10dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:orientation="horizontal"
        android:weightSum="4">
        <ImageView
            android:src="@drawable/service_icon1"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:layout_width="40sp"
            android:layout_height="40sp" />
<TextView
    android:layout_marginLeft="10dp"
    android:gravity="center_vertical"
    android:layout_weight="1"
    android:layout_width="wrap_content"
    android:layout_height="30sp"
    android:text="DEVICE ACCIDENTAL PROTECTION"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F3F2F4"
        android:orientation="horizontal"
       >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:src="@drawable/mobiles"
         />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Text11"
            android:layout_margin="5dp"
            android:textSize="15sp"
            android:textColor="@color/orange"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="11sp"
                android:layout_marginBottom="20dp"
                android:text="@string/Text1"/>
        </LinearLayout>

        <Spinner
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="5dp"
            ></Spinner>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2sp"
        android:background="@color/light_grey"></View>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F3F2F4"
        android:orientation="horizontal"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@drawable/mobiles"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Text22"
                android:layout_margin="5dp"
                android:textSize="15sp"
                android:textColor="@color/orange"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="11sp"
                android:layout_marginBottom="20dp"
                android:text="@string/Text1"/>
        </LinearLayout>

        <Spinner
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="5dp"
            ></Spinner>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2sp"
        android:background="@color/light_grey"></View>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F3F2F4"
        android:orientation="horizontal"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@drawable/mobiles"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Text33"
                android:layout_margin="5dp"
                android:textSize="15sp"
                android:textColor="@color/orange"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="11sp"
                android:layout_marginBottom="20dp"
                android:text="@string/Text1"/>
        </LinearLayout>

        <Spinner
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="5dp"
            ></Spinner>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2sp"
        android:background="@color/light_grey"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F3F2F4"
        android:orientation="horizontal"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@drawable/mobiles"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Text44"
                android:layout_margin="5dp"
                android:textSize="15sp"
                android:textColor="@color/orange"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="11sp"
                android:layout_marginBottom="20dp"
                android:text="@string/Text1"/>
        </LinearLayout>

        <Spinner
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="5dp"
            ></Spinner>

    </LinearLayout>
</LinearLayout>
